게시글 수정

--- a/_posts/Major/Database/2022-06-20-DB 서론(1).md
+++ b/_posts/Major/Database/2022-06-20-DB 서론(1).md
@@ -11,48 +11,38 @@ sidebar:
 
 
 
-## 정보 환경
+# 정보 환경
 
 > 정리 하고 싶은 부분만 정리한 것이기 때문에 내용이 탄탄하지는 않다는점 참고
 
-
+<br>
 
 **Allen Kentro의 지식 삼각형(오름차순) : 데이터->정보->지식->지혜**
 
-* 데이터의 범위가 이정도 위치에 존재한다는 것을 참고 할 것
+* 데이터의 범위가 이정도 위치에 존재한다는 것
 
+<br><br>
 
+## 처리 시스템
 
-
-
-### 처리 시스템
-
-1. 정보 처리 시스템 - `P(D) = I`
+1. **정보 처리 시스템** - `P(D) = I`
    * 데이터(D) -> 처리기(P) -> 정보(I)
-   * 정보 시스템(정보 처리 시스템보다 상위 개념)
+   * **정보 시스템**(정보 처리 시스템보다 상위 개념)
    * 정보 시스템의 예시들 : 응용 시스템, 경영 정보 시스템, 의사 결정 지원 시스템(데이터 웨어하우스, 데이터 마이닝), 지식 관리 시스템
 
-
-
-2. 자료 처리 시스템(컴퓨터 중심)
+2. 자료 처리 시스템(**컴퓨터 중심**)
    * `일괄 처리`(사전 준비 작업 필요, 순차 접근 업무에 유리, 유사 트랜잭션 모아 한번에 처리)
 
-
-
-3. 온라인 처리 시스템(사용자 중심)
+3. 온라인 처리 시스템(**사용자 중심**)
    * `실시간 처리`(통신 제어기 필요)
-
-
 
 4. 분산 처리 시스템
    * 분산 처리기(분산 데이터베이스(블록체인), 통신 네트워크 연결을 통해 하나의 시스템인 것처럼 사용)
    * 클라이언트/서버 형태(현대 컴퓨터 환경)
 
+<br><br>
 
-
-
-
-### DB?
+## DB?
 
 **데이터베이스** : 한 조직의 여러 응용 시스템들이 **공용**하기 위해 **통합**, **저장**한 **운영** 데이터의 집합
 
@@ -64,7 +54,7 @@ sidebar:
   * 중복을 최소화하고, 하나가 바뀌면 다른것도 바꾸는 통제된 중복이다
 * `공용 데이터` : 여러 응용 시스템들이 공동으로 이용
 
-
+<br>
 
 **데이터베이스 특성** : 실시간 접근성, 계속적인 변화, 동시 공용, 내용에 의한 참조
 
@@ -75,9 +65,9 @@ sidebar:
 * `논리적` : 사용자 관점인 데이터 개념적 구조. 
   * 데이터베이스 = {개체, 관계}
 
-​    
+<br>
 
-**개체** : 데이터의 가장 작은 논리적 단위(일반 레코드와 유사)
+**개체(Entity)** : 데이터의 가장 작은 **논리적 단위**(일반 레코드와 유사)
 
 * 학생 테이블의 데이터(학생 한명, 한명)을 개체
 
@@ -87,11 +77,6 @@ sidebar:
 
 \- **개체 집합** : 개체 인스턴스들 전체
 
-​    
+<br>
 
 **관계** : 속성 관계(개체 내 관계:특성), 개체 관계(개체 간 관계)
-
-
-
-
-
