--- a/_posts/Major/Database/2022-06-21-DB 데이터베이스(관리) 시스템(2).md
+++ b/_posts/Major/Database/2022-06-21-DB 데이터베이스(관리) 시스템(2).md
@@ -11,26 +11,21 @@ sidebar:
 
 
 
-## 데이터베이스 관리 시스템(DBMS)
+# 데이터베이스 관리 시스템(DBMS)
 
-**DBMS** : 응용 프로그램과 데이터 사이의 중재자로서 모든 응용 프로그램(사용자)들이 데이터베이스를 공용(범용 소프트웨어)
-
-파일 중심 시스템(종속,중복성 문제) -> 파일 관리 시스템(종속성 문제) -> DBMS(독립성으로 해결) 흐름
-
-**데이터 종속성** : 응용 프로그램과 데이터 간의 상호 의존관계
-
-**데이터 중복성** : 4가지가 없음(일관성, 보안성, 경제성, 무결성)
-
-​    
+**DBMS** : 응용 프로그램과 데이터 사이의 **중재자**로서 모든 응용 프로그램(사용자)들이 데이터베이스를 공용(범용 소프트웨어)
 
 1. DBMS 정의 기능 : 하나의 저장 구조로 여러 사용자의 요구를 지원하게 데이터 조직
-
 2. DBMS 조작 기능 : 사용자 <-> 데이터베이스 인터페이스
-
 3. DBMS 제어 기능 : 데이터의 정확성, 보안성 유지
    * 무결성 유지, 보안, 병행수행 제어, 복구
 
+파일 중심 시스템(종속,중복성 문제) -> 파일 관리 시스템(종속성 문제) -> **DBMS**(독립성으로 해결) 흐름
 
+* **데이터 종속성** : 응용 프로그램과 데이터 간의 상호 의존관계
+* **데이터 중복성** : 4가지가 없음(일관성, 보안성, 경제성, 무결성)
+
+<br>
 
 **DBMS의 궁극적 목적 : 데이터 독립성**
 
@@ -38,7 +33,7 @@ sidebar:
 
 * **물리적 데이터 독립성** : 저장 장치의 효율적 개발(응용, 논리적 데이터 구조에 영향X)
 
-
+<br>
 
 **데이터 독립성 구현 기법 : 사상(mapping)**
 
@@ -46,11 +41,9 @@ sidebar:
 
 * **물리적 구조 사상** : 데이터베이스의 물리적 구조와 데이터베이스의 논리적 구조 사이
 
+<br><br>
 
-
-
-
-### DMBS 발전 과정
+## DMBS 발전 과정
 
 **제1세대 DBMS**
 
@@ -58,7 +51,7 @@ sidebar:
 
 * `IMS`는 계층(1세대)을 기초로
 
-
+<br>
 
 **제2세대 DBMS**
 
@@ -68,38 +61,36 @@ sidebar:
 
 * 예시 : SQL, Oracle
 
-
+<br>
 
 **제3세대 DBMS**
 
 * `객체지향` DBMS(3세대)
 
-
+<br>
 
 **현재 DBMS**
 
-* 객체 관계 DBMS(현재)
+* `객체 관계` DBMS(현재)
 * 기존 `관계`DBMS + `객체지향` DBMS를 의미.
 
-​    
+<br>
 
 **NoSQL** : RDBMS(관계DBMS) 원칙을 따르지 않는 모든 데이터베이스 및 데이터 저장소
 
 **인 메모리 데이터베이스(IMDB)** : 디스크가 아닌 주 메모리에 모든 데이터를 보유하는 데이터베이스
 
-<br>
+<br><br>
 
-## 데이터베이스 시스템의 구성
+# 데이터베이스 시스템의 구성
 
-**데이터베이스 시스템** : 2장의 데이터베이스 관리 시스템(DBMS)보다 큰 관점.
+**데이터베이스 시스템** : 데이터베이스 관리 시스템(DBMS)보다 큰 관점.
 
-데이터, DBMS, 하드웨어, 사용자로 크게 분류
+* **데이터, DBMS, 하드웨어, 사용자**로 크게 분류
 
+<br><br>
 
-
-
-
-### DB 3-Level
+## DB 3-Level
 
 **3단계 데이터베이스 : DB의 3단계(3-level) 표현**
 
@@ -107,7 +98,7 @@ sidebar:
 
 * 외부, 개념, 내부 단계
 
-
+<br>
 
 **스키마** : DB의 3단계 구조에 기반해서 구조(개체, 관계)와 제약조건을 명세
 
@@ -117,11 +108,9 @@ sidebar:
 
 * 스키마는 컴파일되어 카탈로그에 저장
 
+<br><br>
 
-
-
-
-### 정의어, 조작어, 제어어
+## 정의어, 조작어, 제어어
 
 * **데이터 정의어(DDL)** : 스키마의 정의
 
@@ -134,14 +123,14 @@ sidebar:
 * **데이터 제어어(DCL)** : DB관리 목적으로 DBA(데이터베이스 관리자)가 사용
   * DBA의 의무 : 1. DB 설계와 운영, 2. 행정 및 불평 해결, 3. 시스템 감시 및 성능 분석
 
-
+<br>
 
 DBMS의 구성요소
 
 * DDL 컴파일러, 질의어 처리기, 예비 컴파일러, DML 컴파일러,  
   런타임 데이터베이스 처리기, 트랜잭션 관리자, 저장 데이터 관리자
 
-​    
+<br>
 
 **데이터베이스 머신(DB용 컴퓨터)** : DBMS까지도 하드웨어로 구성해둔 컴퓨터라고 생각.
 
