--- a/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
+++ b/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
@@ -11,9 +11,9 @@ sidebar:
 
 
 
-## 관계 데이터베이스
+# 관계 데이터베이스
 
-**테이블들의 집합으로 표현한것이 관계 데이터베이스(RDB).  **
+**테이블들의 집합으로 표현한것이 관계 데이터베이스(RDB)  **  
 **RDBMS와 구분할 것!**
 
 **관계 데이터 모델**은 수학에서의 `릴레이션과 집합 이론`에 기초
@@ -24,17 +24,17 @@ sidebar:
 * `도메인` : 애트리뷰트가 취할 수 있는 값들의 집합
   * 도메인으로 정의하면 보다 안전!
 
-
-
-`릴레이션 인스턴스` : 투플들의 집합
-
-* 릴레이션 외연과 동의어. 동적 성질
-
-`릴레이션 스키마` : 애트리뷰트의 집합(정확하게는 릴레이션(테이블) 이름 + 애트리뷰트 이름)
-
-* 릴레이션 내포, 스킴과 동의어. 정적 성질
+<br>
 
 **`릴레이션` = 릴레이션 스키마 + 릴레이션 인스턴스**    
+
+* `릴레이션 인스턴스` : 투플들의 집합
+  * 릴레이션 외연과 동의어. 동적 성질
+
+
+* `릴레이션 스키마` : 애트리뷰트의 집합(정확하게는 릴레이션(테이블) 이름 + 애트리뷰트 이름)
+  * 릴레이션 내포, 스킴과 동의어. 정적 성질
+
 
 * 릴레이션의 특성
   1. 투플의 유일성
@@ -42,17 +42,15 @@ sidebar:
   3. 애트리뷰트의 무순서성
   4. 애트리뷰트의 원자성
 
-
+<br>
 
 **`관계 데이터베이스` : 테이블들의 집합**
 
 **`관계 데이터베이스 스키마` = 릴레이션 스키마 + 무결성 제약조건(개체 무결성, 참조 무결성)**
 
+<br><br>
 
-
-
-
-### 키(Key)
+## 키(Key)
 
 **데이터베이스 키**
 
@@ -65,11 +63,11 @@ sidebar:
   * S : 교수(**교수번호**, 교수이름, 학과번호, 직급)
   * R : 학과(**학과번호**, 학과이름, **`학과장교수번호`**, 학생수)
   * 릴레이션 R의 애트리뷰트 집합 FK가 릴레이션 S의 기본키일 때 이 FK는 R의 외래키이다.
-  * FK : 외래키, PK : 기본키 로 해석 하면 됨.
+  * FK : 외래키, PK : 기본키
 
-<br>
+<br><br>
 
-## 관계대수와 관계해석
+# 관계대수와 관계해석
 
 **연산** : 시스템 입장  
 **데이터 언어** : 사용자 입장
@@ -84,11 +82,9 @@ sidebar:
   * 표현방법이 다를 뿐 관계 대수(what,how)나 관계 해석(what)에서의 기능들은 동일
   * 다만, 관계 해석의 경우 what만 이용한 비절차 언어이므로 사용자 입장에선 다루기 더 쉬움
 
+<br><br>
 
-
-
-
-### 관계 대수
+## 관계 대수
 
 **기본연산**
 
@@ -96,7 +92,7 @@ sidebar:
 * **순수 관계 연산자(실렉트, 프로젝트, 조인, 디비전)**
 * **폐쇄성질 : 중첩된 수식 표현 가능**
 
-
+<br>
 
 **일반 집합 연산자**
 
@@ -108,7 +104,7 @@ sidebar:
 * `차집합(DIFFERENCE, -)  `
 * `카티션 프로덕트(CARTESIAN PRODUCT, ×) `
 
-
+<br>
 
 **순수 관계 연산자**
 
@@ -121,7 +117,7 @@ sidebar:
 
 * `디비전(÷)` :R÷S＝{ t | t∈ π<sub>D</sub>(R) ∧ t · s∈R  for all s∈S }
 
-
+<br>
 
 **개명 연산** : 중간 처리 결과 릴레이션에 이름지정, 애트리뷰트 이름 변경 때 사용
 
@@ -129,7 +125,7 @@ sidebar:
 
 **복합 연산** : 기본 연산으로 대체가능한 연산(`교집합, 조인, 디비전`)
 
-
+<br>
 
 **관계 대수의 확장**
 
@@ -141,9 +137,7 @@ sidebar:
 
 * 집계 연산 : 형식? G<sub>A</sub>F<sub>B</sub>(E) 예시? GROUP<sub>과목번호</sub>AVG<sub>성적</sub>(등록)
 
-
-
-
+<br><br>
 
 ### 관계 대수의 질의문 표현
 
@@ -162,7 +156,7 @@ sidebar:
 * '데이터베이스‘ 과목을 삭제하라.
   * 과목 - (σ<sub>과목이름='데이터베이스'</sub>(과목))
 
-<br>
+<br><br>
 
 ## 관계 해석
 
@@ -172,7 +166,7 @@ sidebar:
 
 * 관계 데이터 모델의 연산 표현 방법, 비절차적(what)
 
-​    
+<br>
 
 **투플 관계 해석** : 원하는 릴레이션을 투플 해석식으로 정의하는 표기법
 
@@ -180,9 +174,7 @@ sidebar:
 
 * 투플 변수 – 자유변수, 속박변수
 
-​    
-
-
+<br><br>
 
 ### 투플 해석식의 질의문 표현
 
@@ -197,15 +189,13 @@ sidebar:
   * {s.Sname｜STUDENT(s) ∧ (￢∃e)(ENROL(e) ∧ s.Sno=e.Sno ∧ e.Cno=‘C413’) }
   * ￢ 란 부정을 의미한다.
 
-
+<br>
 
 **도메인 관계 해석** : 원하는 릴레이션을 도메인 해석식으로 정의하는 표기법
 
 * 도메인 변수 – 자유변수, 속박변수
 
-
-
-
+<br><br>
 
 ### 도메인 해석식의 질의문 표현
 
@@ -221,7 +211,7 @@ sidebar:
   * { xSname｜(∃xSno) ((STUDENT(xSname, xSno, xYear, xDept) ∧ (￢∃xxSno) (∃xCno) (ENROL(xxSno, xCno, xGrade, xMidterm, xFinal) ∧ xSno=xxSno ∧ 
     xCno='C324')) }
 
-​    
+<br>
 
 **QBE -> 중요하진 않음**
 
