--- a/_posts/Major/Database/2022-08-25-DB SQL(4).md
+++ b/_posts/Major/Database/2022-08-25-DB SQL(4).md
@@ -33,7 +33,7 @@ sidebar:
   * 릴레이션, 투플, 애트리뷰트 가 아닌 일반 용어 사용이란 의미
 * `선언적 언어`(데이터 처리를 위한 접근경로 명세가 불필요)
 
-
+<br>
 
 **스키마** : 하나의 응용(사용자)에 속하는 테이블과 기타 구성요소 등의 그룹
 
@@ -42,15 +42,13 @@ sidebar:
 * 스키마는 DBA로부터 허가받은 자만 소유
   * 권한 예시 : `create schema university authorization SHLEE;`
 
-
+<br>
 
 **카탈로그** : SQL시스템 내에서 한 스키마 집합
 
 * 하나의 특별한 스키마 포함(Information_schema)
 
-
-
-
+<br><br>
 
 ### 도메인, 테이블(DDL, DML)
 
@@ -65,22 +63,22 @@ sidebar:
 
 3. SQL 데이터 조작문(검색, 갱신, 삽입, 삭제) - `DML`
 
-
+<br>
 
 **CREATE - DOMAIN**
 
-```
+```sql
 CREATE DOMAIN DEPT CHAR(4)  
 	DEFAULT '???’ 
 	CONSTRAINT VALID-DEPT CHECK( VALUE IN 
 	('COMP', 'ME', 'EE', 'ARCH', '???'));
 ```
 
-
+<br>
 
 **CREATE - VIEW**
 
-```
+```sql
 create view deptsize(DEPT, SIZE)
 	AS SELECT DEPT, COUNT(*)
 		FROM STUDENT
@@ -88,14 +86,14 @@ create view deptsize(DEPT, SIZE)
 		[WITH CHECK OPTION;]
 ```
 
-
+<br>
 
 **CREATE - TABLE**
 
 * 외래키 등록하는것 잘 확인
 * CHECK() 는 제약조건을 의미
 
-```
+```sql
 CREATE TABLE ENROL(
     Sno INTEGER NOT NULL,
     Cno CHAR(6) NOT NULL,
@@ -111,7 +109,7 @@ CREATE TABLE ENROL(
 );
 ```
 
-
+<br>
 
 **ALTER - DOMAIN**
 
@@ -119,7 +117,7 @@ CREATE TABLE ENROL(
 alter domain (도메인)이름 <내용>
 ```
 
-
+<br>
 
 **ALTER - TABLE**
 
@@ -129,7 +127,7 @@ alter table (테이블)이름 [add 열(이름) 타입 ...]
 						alter 열(이름) 타입 ...
 ```
 
-
+<br>
 
 **DROP - DOMAIN**
 
@@ -141,7 +139,7 @@ alter table (테이블)이름 [add 열(이름) 타입 ...]
 drop domain (도메인)이름 ...
 ```
 
-
+<br>
 
 **DROP - TABLE**
 
@@ -149,7 +147,7 @@ drop domain (도메인)이름 ...
 drop table (테이블)이름 ...
 ```
 
-
+<br>
 
 **DROP - VIEW**
 
@@ -157,7 +155,7 @@ drop table (테이블)이름 ...
 drop view (뷰)이름 ...
 ```
 
-
+<br>
 
 **SELECT**
 
@@ -175,7 +173,7 @@ From 테이블_리스트
 [Order by 열_리스트 [ASC|DESC]];
 ```
 
-
+<br>
 
 **UPDATE**
 
@@ -184,7 +182,7 @@ Update 테이블 Set { 열_이름 = 산술식 }+
 [Where 조건]
 ```
 
-
+<br>
 
 **INSERT**
 
@@ -202,7 +200,7 @@ Insert into 테이블([열_리스트])
 VALUES (열 값_리스트)
 ```
 
-
+<br>
 
 **DELETE**
 
@@ -212,9 +210,7 @@ From 테이블
 [Where 조건]
 ```
 
-
-
-
+<br><br>
 
 ### 다양한 속성들
 
@@ -229,7 +225,7 @@ From 테이블
   * 3개 전부 동일한 동작
   * 조인이 합치는걸 의미
 
-
+<br>
 
 **OUTER JOIN**
 
@@ -242,7 +238,7 @@ From 테이블
 * `FULL JOIN PROJECT ON PROJECT.EMP_ID = EMPLOYEE.EMP_ID;`
   * id 1~6까지 출력
 
-
+<br>
 
 **부속 질의문**
 
@@ -257,7 +253,7 @@ From 테이블
 * `UNION+부속질의문(중복은 제거함)`
   * 참고 : 합집합(UNION)
 
-
+<br>
 
 **기타**
 
@@ -271,9 +267,7 @@ From 테이블
   * 해당되지 않는 값
   * 의도적으로 유보한 값
 
-
-
-
+<br><br>
 
 ### 다양한 DML 예시
 
@@ -283,7 +277,7 @@ From 테이블
 SELECT DISTINCT Dept FROM STUDENT;
 ```
 
-
+<br>
 
 **테이블의 열 전부를 검색하는 경우**
 
@@ -291,7 +285,7 @@ SELECT DISTINCT Dept FROM STUDENT;
 SELECT * FROM STUDENT;
 ```
 
-
+<br>
 
 **조건 검색**
 
@@ -300,6 +294,8 @@ SELECT Sno,Sname FROM STUDENT
 WHERE Dept = '컴퓨터' AND Year = 4;
 ```
 
+<br>
+
 **순서를 명세하는 검색**
 
 ```
@@ -307,7 +303,7 @@ SELECT Sno, Cno FROM ENROL
 WHERE Midterm ≥ 90 ORDER BY Sno DESC, Cno ASC;
 ```
 
-
+<br>
 
 **산술식과 문자 스트링이 명세된 검색(이름 변경)**
 
@@ -316,7 +312,7 @@ SELECT Sno AS 학번, '중간시험 = ' AS 시험, Midterm + 3 AS 점수 FROM EN
 WHERE Cno = 'C312';
 ```
 
-
+<br>
 
 **복수 테이블로부터의 검색(조인)**
 
@@ -325,7 +321,7 @@ SELECT S.Sname, S.Dept, E.Grade FROM STUDENT S, ENROL E
 WHERE S.Sno = E.Sno AND E.Cno = 'C413';
 ```
 
-
+<br>
 
 **자기 자신의 테이블에 조인하는 검색**  
 **같은 학과 학생의 학번을 쌍으로 검색하라. 단 첫 번째 학번은 두 번째 학번 보다 작다.** 
@@ -336,7 +332,7 @@ WHERE S1.Dept = S2.Dept
 AND S1.Sno < S2.Sno;
 ```
 
-
+<br>
 
 **FROM 절에 조인 명세**
 
@@ -351,7 +347,7 @@ SELECT Sname, Dept, Grade FROM STUDENT NATURAL JOIN ENROL
 WHERE ENROL.Cno = 'C413';
 ```
 
-
+<br>
 
 **집계 함수(aggregate function)를 이용한 검색**
 
@@ -367,7 +363,7 @@ SELECT AVG(Midterm) AS 중간평균 FROM ENROL
 WHERE Cno = ‘C413’;
 ```
 
-
+<br>
 
 **GROUP BY를 이용한 검색**
 
@@ -376,7 +372,7 @@ SELECT Cno, AVG(Final) AS 기말평균 FROM ENROL
 GROUP BY Cno;
 ```
 
-
+<br>
 
 **HAVING을 사용한 검색**
 
@@ -385,7 +381,7 @@ SELECT Cno, AVG(Final) AS 평균 FROM ENROL
 GROUP BY Cno HAVING COUNT(*) ≥ 3;
 ```
 
-
+<br>
 
 **부속 질의문(subquery)을 사용한 검색**
 
@@ -405,7 +401,7 @@ WHERE Dept =(SELECT Dept FROM STUDENT
 			WHERE Sname = ‘정기태’);
 ```
 
-
+<br>
 
 * 학번이 500인 학생의 모든 기말 성적보다 좋은 학기말 성적을 받은 학생의 학번과 과목번호를 검색하라.
 
@@ -415,7 +411,7 @@ WHERE Final > ALL(SELECT Final FROM ENROL
 				WHERE Sno = 500);
 ```
 
-
+<br>
 
 **LIKE를 사용하는 검색**
 
@@ -424,7 +420,7 @@ SELECT Cno, Cname FROM COURSE
 WHERE Cno LIKE 'C%';
 ```
 
-
+<br>
 
 **NULL을 사용한 검색 (cont’d)**
 
@@ -435,7 +431,7 @@ SELECT Sno, Sname FROM STUDENT
 WHERE Dept IS NULL;
 ```
 
-
+<br>
 
 **EXISTS를 사용하는 검색**
 
@@ -447,7 +443,7 @@ WHERE EXISTS(SELECT * FROM ENROL
 			WHERE Sno = STUDENT.Sno AND Cno = 'C413');
 ```
 
-
+<br>
 
 * 과목 ‘C413’에 등록하지 않은 학생의 이름을 검색하라.
 
@@ -457,7 +453,7 @@ WHERE NOT EXISTS(SELECT * FROM ENROL
 				WHERE Sno = STUDENT.Sno AND Cno = 'C413');
 ```
 
-
+<br>
 
 **UNION이 관련된 검색**
 
@@ -469,7 +465,7 @@ SELECT Sno FROM ENROL
 WHERE Cno = 'C324';
 ```
 
-
+<br>
 
 **부속 질의문을 이용한 변경**
 
@@ -483,7 +479,7 @@ UPDATE STUDENT SET Dept = (SELECT Dept FROM COURSE
 WHERE Year = 4;
 ```
 
-
+<br>
 
 
 **부속 질의문을 이용한 레코드 삽입**
@@ -494,7 +490,7 @@ INSERT INTO COMPUTER(Sno, Sname, Year)
 	WHERE Dept = '컴퓨터';
 ```
 
-
+<br>
 
 **부속 질의문을 사용한 삭제**
 
@@ -504,9 +500,7 @@ WHERE Cno = 'C413' AND Final < 60 AND ENROL.Sno IN
 (SELECT Sno FROM STUDENT WHERE Dept = '컴퓨터');
 ```
 
-
-
-
+<br><br>
 
 ### 뷰의 생성 예시
 
@@ -515,7 +509,7 @@ CREATE VIEW CSTUDENT(Sno, Sname, Year) AS SELECT   Sno, Sname, Year
 FROM STUDENT WHERE  Dept = '컴퓨터’ WITH CHECK OPTION;
 ```
 
-
+<br>
 
 **AS SELECT : 열의 이름 상속**
 **상속이 불가능한 경우나 열 이름이  중복될 경우 반드시 열 이름 명세**
@@ -525,7 +519,7 @@ CREATE VIEW DEPTSIZE(Dept, Size) AS  SELECT Dept, COUNT(*)
 FROM    STUDENT   GROUP  BY Dept;
 ```
 
-
+<br>
 
 **두 개 이상 테이블 조인**
 
@@ -538,7 +532,7 @@ WHERE   STUDENT.Sno = ENROL.Sno
 AND ENROL.Final > 90;
 ```
 
-
+<br>
 
 **정의된 뷰를 이용하여 또 다른 뷰를 정의**
 
@@ -548,9 +542,7 @@ AS  SELECT   Sname
 FROM     HONOR WHERE   Dept = '컴퓨터';
 ```
 
-
-
-
+<br><br>
 
 ### 뷰의 제거 예시
 
@@ -563,9 +555,7 @@ DROP VIEW 뷰_이름 { RESTRICT | CASCADE };
 DROP VIEW DEPTSIZE RESTRICT;
 ```
 
-
-
-
+<br><br>
 
 ### 뷰의 조작 예시
 
@@ -583,7 +573,7 @@ CREATE VIEW STUDENT_VIEW2 AS SELECT Sname, Dept FROM STUDENT;
 → 기본 키 불포함 : 이론적으로 삽입, 삭제, 갱신 불가
 ```
 
- 
+ <br>
 
 * 행 부분 집합 뷰(row subset view)
 
@@ -593,9 +583,7 @@ WHERE Year=4;
 → 기본 키 포함(Sno) : 이론적으로 삽입, 삭제, 갱신 가능
 ```
 
-
-
-
+<br><br>
 
 ### 기타
 
@@ -609,7 +597,7 @@ WHERE Year=4;
 
 * 물론 이러한 것들은 하나의 예시일뿐 모든 언어가 동일X(당장의 jsp에서도 sql문 사용방식 달랐음)
 
-
+<br>
 
 커서가 필요한 데이터 조작은 여러 데이터고,  
 커서가 필요 없는 데이터 조작은 단일 데이터이다.
