--- a/_posts/Major/Database/2022-08-26-DB 데이터 종속성과 정규화(5).md
+++ b/_posts/Major/Database/2022-08-26-DB 데이터 종속성과 정규화(5).md
@@ -13,8 +13,6 @@ sidebar:
 
 ## 데이터 종속성과 정규화
 
-
-
 ### 3종류 이상
 
 * `삭제 이상`(정보손실)
@@ -30,7 +28,7 @@ sidebar:
   * 400번 학생의 학년을 4에서 3으로 하나만 변경  
     ⇒ 400번 학생에 대한 4개의 투플 모두를 변경해야 함(`갱신 이상`)
 
-
+<br>
 
 데이터가 보통 `종속성`이 있으니까 이렇게 `이상`이 발생하는 것이다.  
 `정규화`는 이런 종속성을 없애주기 위해 데이터를 `분할` 하는 과정이라 할 수 있다.
@@ -38,9 +36,7 @@ sidebar:
 * 즉, 이상의 해결은 정규화 과정이라 할 수 있다.
 * 스키마 변환(조건에 맞게 릴레이션 분할) = 정규화 과정과 유사
 
-
-
-
+<br><br>
 
 ### 정규화를 위한 개념
 
@@ -57,7 +53,7 @@ sidebar:
 * 함수 관계의 표현 (정규형 문제시 FDD를 그려서 확인!)
 * FDD를 그리면 훨씬 정규형을 구하기 쉬우므로 이부분은 따로 정리하지 않으니 구글링을 통해 확인.
 
-
+<br>
 
 **완전함수종속** : X’⊂ X 이고 X’ →  Y 가 성립되는 애트리뷰트 X'이 존재하지 않는 경우
 
@@ -83,9 +79,7 @@ sidebar:
 
 **이부분은 꼭 그림과 함께 보면 이해하기 쉬우므로 그림을 참고 할 것**
 
-
-
-
+<br><br>
 
 ### 제 1~5정규형
 
@@ -94,7 +88,7 @@ sidebar:
 * 스키마 변환의 원리 3가지 = 정규화의 원칙
   * 정보 표현의 무손실, 최소의 데이터 중복, 분리의 원칙
 
-
+<br>
 
 **제1정규형** – `원자 값`으로 분리
 
@@ -110,9 +104,7 @@ sidebar:
 
 * **참고 : 1NF->3NF 이런식의 변화는 불가함. 순서대로 분리해야함.**
 
-
-
-
+<br><br>
 
 ### 정규화 과정 (무손실 분해)
 
@@ -124,12 +116,10 @@ sidebar:
 [함수 종속이 아닌 다치 종속(MVD) 제거] -> 4NF ->  
 [후보 키를 통하지 않은 조인 종속(JD) 제거] -> 5NF**
 
-* 실무에서는 진짜 많이 사용한다고 해도 BCNF까지 사용합니다.
+* 실무에서는 진짜 많이 사용한다고 해도 BCNF까지 사용
 * 4, 5NF는 이론으로만 기억할 것
 
-
-
-
+<br><br>
 
 
 ### 역 정규형
@@ -144,7 +134,7 @@ sidebar:
 * 하나의 테이블에 데이터가 너무 많으면 엑세스가 오래걸리니까 `DBMS는 알아서 수평 분할해줌`
 * 다양한 경험을 필요로 하는 작업이다.
 
-
+<br>
 
 **분할의 예시**
 
@@ -160,7 +150,7 @@ sidebar:
 * **특정 칼럼에 보안을 적용해야 하는 경우의 분할** : 칼럼 자체는 권한제어가 없음. 테이블로 나눠서 권한 얻자
   * 분리 예시 : 회원등급
 
-
+<br>
 
 **중복 허용의 예시**
 
