--- a/_posts/Major/Database/2022-08-28-DB 데이터베이스 설계(7).md
+++ b/_posts/Major/Database/2022-08-28-DB 데이터베이스 설계(7).md
@@ -16,9 +16,7 @@ typora-root-url: ../../..
 
 **데이터베이스 생명 주기 : 요구조건 분석 -> 설계 -> 구현 -> 운영 -> 감시 및 개선(되돌림 구조)**
 
-
-
-
+<br><br>
 
 ### 설계
 
@@ -26,11 +24,9 @@ typora-root-url: ../../..
 
 * 병행적으로 추진 : 스키마(데이터), 트랜잭션(처리)
 
-
+<br>
 
 **설계 고려사항** : 무결성, 일관성, 회복, 보안, 효율성, 데이터베이스 성장
-
-
 
 **설계 단계 : 요구조건 분석 -> 개념적 설계 -> 논리적 설계 -> 물리적 설계 -> 구현**
 
@@ -45,14 +41,14 @@ typora-root-url: ../../..
 * 구현 – 목표 DBMS DLL로 스키마 작성, 트랜잭션(응용프로그램) 작성
   * **우리는 목표 DBMS를 RDBMS(관계 DMBS)로 취급중.**
 
-
+<br>
 
 **1. 요구조건 분석**
 
 * 잠정적인 사용자의 식별
 * 어느 사용자를 중점으로 제공하는가 중요
 
-​    
+<br>
 
 **2. 개념적 설계**
 
@@ -60,11 +56,11 @@ typora-root-url: ../../..
   * **개념적 스키마 설계 방법 – 뷰 통합 방법, 애트리뷰트 합성 방법**
   * **뷰 통합 방법** - 하향식 방법
   * **애트리뷰트 합성 방법** – 상향식 방법, 작업-데이터 간의 관계에 기초
-  * 예시로 `E-R diagram`으로 표현하는 부분이라 할 수 있다.
+  * 예시로 **`E-R diagram`으로 표현하는 부분**이라 할 수 있다.
 * **Transaction modeling - 처리 중심(데이터 처리)**
   * **트랜잭션 모델링** – 응용을 위한 트랜잭션을 식별하고 명세, I/O와 기능적 행태를 명세, 유형(검색, 갱신, 혼합)
 
-
+<br>
 
 **예시 : 학사 관계 데이터베이스 스키마 다이어그램**
 
@@ -72,7 +68,7 @@ typora-root-url: ../../..
 
 ![image-20220830190725803](/images/2022-08-28-DB 데이터베이스 설계(7)/image-20220830190725803.png)
 
-
+<br>
 
 **3. 논리적 설계**
 
@@ -80,13 +76,13 @@ typora-root-url: ../../..
 
 * 논리적 설계 세부 단계 – 논리적 데이터 모델로 변환 -> 트랜잭션 인터페이스 설계 -> 스키마의 평가 및 정제
 
-
+<br>
 
 **예시 : 교수와 학생간의 지도 관계의 표현**
 
 ![image-20220830190816637](/images/2022-08-28-DB 데이터베이스 설계(7)/image-20220830190816637.png)
 
-
+<br>
 
 **4. 물리적 설계**
 
@@ -102,17 +98,15 @@ typora-root-url: ../../..
 
   * 저장 공간 할당
 
+<br>
 
-
-**5, DB 구현**
+**5. DB 구현**
 
 * 목표 DBMS의 DDL로 기술된 스키마의 컴파일 및 실행
 
 * 운영 데이터베이스, 실행 트랜잭션 완성(응용프로그램)
 
-
-
-
+<br><br>
 
 ### DB 설계 과정 요약
 
