--- a/_posts/Major/Computer_Network/2022-06-25-컴퓨터 네트워크(1).md
+++ b/_posts/Major/Computer_Network/2022-06-25-컴퓨터 네트워크(1).md
@@ -12,40 +12,36 @@ typora-root-url: ../../..
 
 
 
-### 1. 데이터 전송 시 고려 사항에 대한 3가지
+## 1. 데이터 전송 시 고려 사항에 대한 3가지
 
 **감쇄(attenuation)**
 
 데이터가 전송 도중 `흡수, 열`에 의해서 변화가 돼서 발생하는 `전자파의 에너지손실`
 
-​    
+<br>
 
 **왜곡(distortion)**
 
 `링크상에서의 전파현상은` 서로 다른 `주파수`에 따라 서로 다르게 `감쇄, 지연`되어 `수신 신호`가   
 `전송 신호`와 다르게 되는 현상
 
-
+<br>
 
 **잡음(noise)**
 
 `도전체에서 전자`의 `열운동`으로 인한 `광자수의 불확실함`으로 발생
 
+<br><br>
 
+## 2. 프레임(Frame)에 대해서 서술
 
+**프레임**이란 데이터링크 계층에서 사용되는 `데이터 단위`
 
+* 프레임의 기본 구성은 `목적지 주소, 전송 측 주소, 유료부하 혹은 사용자 데이터 영역`으로 나뉨
 
-### 2. 프레임(Frame)에 대해서 서술
+<br><br>
 
-프레임이란 데이터링크 계층에서 사용되는 데이터 단위
-
-* 프레임의 기본 구성은 목적지 주소, 전송 측 주소, 유료부하 혹은 사용자 데이터 영역으로 나뉨
-
-
-
-
-
-### 3. 프로토콜의 기본 구성요소 3가지를 서술
+## 3. 프로토콜의 기본 구성요소 3가지를 서술
 
 **프로토콜의 기본 구성요소 – 무엇을(구문), 어떻게(의미), 언제(타이밍)**
 
@@ -55,55 +51,45 @@ typora-root-url: ../../..
 
 * **타이밍**이란 언제 데이터를 전송?, 얼마나 빠른 속도로 전송? 과 같은 내용 포함
 
+<br><br>
 
-
-
-
-### 4. OSI 7계층에 대해서 나열하고 간략하게 각 계층마다 설명
+## 4. OSI 7계층에 대해서 나열하고 간략하게 각 계층마다 설명
 
 **물리 계층**
 
-`데이터링크 계층`을 도와 데이터통신 기능을 원활하게 수행하도록 `물리적인
+`데이터링크 계층`을 도와 데이터통신 기능을 원활하게 수행하도록 `물리적인 연결 설정과 유지 및 해제 기능`과 관계됨
 
-연결 설정과 유지 및 해제 기능`과 관계됨
-
-
+<br>
 
 **데이터링크 계층**
 
 `물리 계층`을 이용해 `신뢰성` 있는 `데이터 전송 수단`을 제공
 
-​    
+<br>
 
 **네트워크 계층**
 
-`데이터링크 계층`을 이용해 시스템 간에 데이터 전송을 위해 `경로배정, 중계기능, 흐름제어, 
+`데이터링크 계층`을 이용해 시스템 간에 데이터 전송을 위해 `경로배정, 중계기능, 흐름제어, 오류제어` 등의 기능을 수행
 
-오류제어` 등의 기능을 수행
-
-
+<br>
 
 **수송 계층**
 
 `네트워크 계층`과 `독립적`으로 프로세스 상호 간의 신뢰성 있는 완전한 `메시지 전달 기능`을 제공
 
-​    
+<br>
 
 **세션 계층**
 
-서로 다른 컴퓨터에서 동작되고 있는 두 개의 `응용 계층 프로토콜 개체`가 데이터를 전송하는 데 
+서로 다른 컴퓨터에서 동작되고 있는 두 개의 `응용 계층 프로토콜 개체`가 데이터를 전송하는 데 필요한 대화를 관리, 조정
 
-필요한 대화를 관리, 조정
-
-​    
+<br>
 
 **표현 계층**
 
-두 사용자 응용 프로세스 간에 교환될 데이터의 형식과 관련되며, [사용자 데이터
+두 사용자 응용 프로세스 간에 교환될 데이터의 형식과 관련되며, [사용자 데이터 전송을 위해 상호 동의하고 이해하는 형식으로 협상되도록 하는 수단을 제공]
 
-전송을 위해 상호 동의하고 이해하는 형식으로 협상되도록 하는 수단을 제공]
-
-
+<br>
 
 **응용 계층**
 
@@ -111,11 +97,9 @@ OSI 참조모델의 최상위 계층
 
 `자원 결정, 구문 확인, 정보처리` 및 프로세스 간의 `인터페이스, 데이터통신`을 위한 기본적인 응용 기능 제공
 
+<br><br>
 
-
-
-
-### 5. OSI 모델과 TCP/IP 네트워크 모델을 비교
+## 5. OSI 모델과 TCP/IP 네트워크 모델을 비교
 
 **OSI 모델**은 `7계층`인 반면에 **TCP/IP 네트워크 모델**은` 5계층`이다.
 
@@ -123,49 +107,43 @@ OSI 참조모델의 최상위 계층
 
 **TCP/IP**는 모든 네트워크에 사용되는 `표준 프로토콜`이지만 OSI는 프로토콜이 아니라 `시스템 아키텍처`를 이해하고 설계하는 데 사용되는 `참조 모델`이다.
 
+<br><br>
 
-
-
-
-### 6. TCP/IP 모델 5계층에 대해서 나열하고 간략하게 각 계층마다 설명
+## 6. TCP/IP 모델 5계층에 대해서 나열하고 간략하게 각 계층마다 설명
 
 **물리 계층과 데이터링크 계층**
 
 물리 계층과 데이터링크 계층에 대한 특정한 프로토콜은 규정하고 있지 않음
 
-
+<br>
 
 **네트워크 계층** 
 
 OSI 모델의 네트워크 계층이며 프로토콜로 `ARP, RARP, ICMP, IGMP` 등 이 있음
 
-​    
+<br>
 
 **수송 계층**
 
-OSI 모델의 수송 계층이며 프로토콜로` TCP, UDP, SCTP`가 있음
+OSI 모델의 수송 계층이며 프로토콜로 ` TCP, UDP, SCTP`가 있음
 
-​    
+<br>
 
 **응용 계층**
 
 TCP/IP 네트워크 모델에서는 OSI 모델의 `세션 계층, 표현 계층, 응용 계층을 모두 결합`하여 하나의 응용 계층이 되었음
 
-​    
+<br><br>
 
-
-
-### 7. 회선제어 기능에서 ENQ/ACK 기법에 대해서 그림을 그려 설명
+## 7. 회선제어 기능에서 ENQ/ACK 기법에 대해서 그림을 그려 설명
 
 **ENQ/ACK** **기법** **:** **전용 전송 링크로 구성된 스테이션 사이에서 주로 사용되는 기법**
 
   ![EMB00004a2c522d](/images\2022-06-25-컴퓨터 네트워크(1)\EMB00004a2c522d.bmp)  
 
+<br><br>
 
-
-
-
-### 8. 폴링기법에서 선택(Select)모드와 폴(poll)모드에 대해서 그림을 그려 비교 설명
+## 8. 폴링기법에서 선택(Select)모드와 폴(poll)모드에 대해서 그림을 그려 비교 설명
 
 **폴링기법 : 하나의 스테이션을 주 스테이션, 나머지는 종속 스테이션**
 
@@ -173,15 +151,11 @@ TCP/IP 네트워크 모델에서는 OSI 모델의 `세션 계층, 표현 계층,
 
 ![EMB00004a2c522f](/images\2022-06-25-컴퓨터 네트워크(1)\EMB00004a2c522f.bmp)  
 
+<br><br>
 
-
-
-
-### 9. 정지-대기 ARQ 에 대해서 설명
+## 9. 정지-대기 ARQ 에 대해서 설명
 
 **데이터 전송 시 프레임이 손상되었거나 분실되었을 때 재전송을 하는 과정이다**
-
-
 
 **정지-대기 ARQ 재전송 절차**  
 
@@ -193,15 +167,13 @@ TCP/IP 네트워크 모델에서는 OSI 모델의 `세션 계층, 표현 계층,
 
 4. 전송장치에는 타이머가 있어서 주어진 시간 내에 ACK가 오지 않으면 재전송
 
+<br><br>
 
-
-
-
-### 10. HDLC 프레임 형식에 대해서 그림을 그리고 각 부분으로 설명
+## 10. HDLC 프레임 형식에 대해서 그림을 그리고 각 부분으로 설명
 
   ![EMB00004a2c5230](/images\2022-06-25-컴퓨터 네트워크(1)\EMB00004a2c5230.bmp)  
 
-
+<br>
 
 **플래그**는 프레임의 `시작과 끝`을 나타내고, 8비트 고유의 패턴으로 구성
 
@@ -209,7 +181,7 @@ TCP/IP 네트워크 모델에서는 OSI 모델의 `세션 계층, 표현 계층,
 
 **제어**는 정보 전송, 오류 제어, 링크 연결 및 해제를 하는` I-프레임, S-프레임, U-프레임`이 구성
 
-**정보**는 우리가 실제로 사용할 정보들을 패킷으로 가지며` I-프레임, U-프레임`이 구성
+**정보**는 우리가 실제로 사용할 정보들을 패킷으로 가지며 ` I-프레임, U-프레임`이 구성
 
 **FCS**는 플래그를 제외한 나머지 프레임의 bit들로 계산된 HDLC의 `오류 검출 코드`이다
 
