--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
@@ -136,16 +136,16 @@ typora-root-url: ../../..
 
 - [1, 2, 3 더하기 3](https://bh946.github.io/baekjoontest/(C++)1,-2,-3-%EB%8D%94%ED%95%98%EA%B8%B0-3-%EB%B0%B1%EC%A4%8015988/)
 - [RGB거리](https://bh946.github.io/baekjoontest/(C++)RGB%EA%B1%B0%EB%A6%AC-%EB%B0%B1%EC%A4%801149/)
-- [동물원](https://bh946.github.io/baekjoontest/(C++)%EB%8F%99%EB%AC%BC%EC%9B%90-%EB%B0%B1%EC%A4%801309/) => 할차례
+- [동물원](https://bh946.github.io/baekjoontest/(C++)%EB%8F%99%EB%AC%BC%EC%9B%90-%EB%B0%B1%EC%A4%801309/) 
   - 복습하기
 
 - [오르막 수](https://bh946.github.io/baekjoontest/(C++)%EC%98%A4%EB%A5%B4%EB%A7%89-%EC%88%98-%EB%B0%B1%EC%A4%8011057/)
 - [스티커](https://bh946.github.io/baekjoontest/(C++)%EC%8A%A4%ED%8B%B0%EC%BB%A4-%EB%B0%B1%EC%A4%809465/)
-- [포도주 시식](https://bh946.github.io/baekjoontest/(C++)%ED%8F%AC%EB%8F%84%EC%A3%BC-%EC%8B%9C%EC%8B%9D-%EB%B0%B1%EC%A4%802156/)
+- [포도주 시식 ](https://bh946.github.io/baekjoontest/(C++)%ED%8F%AC%EB%8F%84%EC%A3%BC-%EC%8B%9C%EC%8B%9D-%EB%B0%B1%EC%A4%802156/)
   - 복습하기
 
 - [정수 삼각형](https://bh946.github.io/baekjoontest/(C++)%EC%A0%95%EC%88%98-%EC%82%BC%EA%B0%81%ED%98%95-%EB%B0%B1%EC%A4%801932/)
-- [가장 큰 증가 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%ED%81%B0-%EC%A6%9D%EA%B0%80-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011055/)
+- [가장 큰 증가 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%ED%81%B0-%EC%A6%9D%EA%B0%80-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011055/) => 할차례
   - 복습하기
 
 - [가장 긴 감소하는 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EA%B0%90%EC%86%8C%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011722/)
