--- a/_posts/Coding_Test/Baekjoon_Concept/2023-09-26-(백준_코테2)코딩 테스트 준비 - 기초&연습.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-09-26-(백준_코테2)코딩 테스트 준비 - 기초&연습.md
@@ -34,8 +34,8 @@ typora-root-url: ../../..
 - **[16935번 - 배열 돌리기 3](https://bh946.github.io/baekjoontest/(java)%EB%B0%B0%EC%97%B4-%EB%8F%8C%EB%A6%AC%EA%B8%B03-%EB%B0%B1%EC%A4%8016935/)** -> "진하게" 아닌것들은 다시 풀것
 - [16926번 - 배열 돌리기 1](https://www.acmicpc.net/problem/16926)
 - [16927번 - 배열 돌리기 2](https://www.acmicpc.net/problem/16927)
-- [14499번 - 주사위 굴리기](https://www.acmicpc.net/problem/14499) => 할차례
-- [14890번 - 경사로](https://www.acmicpc.net/problem/14890)
+- **[14499번 - 주사위 굴리기](https://www.acmicpc.net/problem/14499)** 
+- [14890번 - 경사로](https://www.acmicpc.net/problem/14890) => 할차례
 - [15662번 - 톱니바퀴 (2)](https://www.acmicpc.net/problem/15662)
 - [14503번 - 로봇 청소기](https://www.acmicpc.net/problem/14503)
 - [14890번 - 경사로](https://www.acmicpc.net/problem/14890)
