--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -196,7 +196,7 @@ public class Main {
 
 <br><br>
 
-## 문자열 - string
+## 문자열 - string, char[]
 
 **주의사항**
 
@@ -225,6 +225,15 @@ s.insert, delete, deleteCharAt, setCharAt, reverse, setLength 등등 다양
 <br>
 
 **아래 문법들은 기본적으로 암기**
+
+* **char[] to string to int**
+  * `int num = Integer.parseInt(new String(val));`
+* **string to char[]**
+  * `char[] inChar = inStr.toCharArray();`
+* **char length**
+  * `val.length`
+* **string length**
+  * `val.length()`
 
 ```java
 String s = "abcde";
@@ -1373,7 +1382,7 @@ for(String key : hm.keySet()) {
 // 3. LinkdedHashMap => 값들 HashMap이라 동일하다 가정
 for(String key : hm.keySet()) {				
 	lhm.get(key); // 순서가 보장
-}
+}aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 ```
 
 <br>
@@ -1414,6 +1423,8 @@ for (Entry<String, Integer> entry : hm.entrySet()) {
 
 * TreeSet : 중복된 데이터의 저장을 허용하지 않으며, 정렬된 위치에 저장하므로 저장 순서를 유지하지도 않는다.
   * 여전히 get메소드 없고, iterator를 사용
+  * `TreeSet<Integer> set = new TreeSet<Integer>(Collections.reverseOrder()); //내림차순`
+  * `Integer inArr2[] = set.toArray(new Integer[set.size()]); //Set to Array`
 * TreeMap : TreeSet과 동일한데 추가로 key, value 쌍으로 저장된다.
 
 * prev, next나 lower_bound 이런게 필요할 때 유용
