--- a/_posts/Coding_Test/Baekjoon_Concept/2023-09-26-(백준_코테2)코딩 테스트 준비 - 기초&연습.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-09-26-(백준_코테2)코딩 테스트 준비 - 기초&연습.md
@@ -35,8 +35,8 @@ typora-root-url: ../../..
 - [16926번 - 배열 돌리기 1](https://www.acmicpc.net/problem/16926)
 - [16927번 - 배열 돌리기 2](https://www.acmicpc.net/problem/16927)
 - **[14499번 - 주사위 굴리기](https://www.acmicpc.net/problem/14499)** 
-- [14890번 - 경사로](https://www.acmicpc.net/problem/14890) => 할차례
-- [15662번 - 톱니바퀴 (2)](https://www.acmicpc.net/problem/15662)
+- [14890번 - 경사로](https://www.acmicpc.net/problem/14890) 
+- [15662번 - 톱니바퀴 (2)](https://www.acmicpc.net/problem/15662) => 할차례
 - [14503번 - 로봇 청소기](https://www.acmicpc.net/problem/14503)
 - [14890번 - 경사로](https://www.acmicpc.net/problem/14890)
 - [15685번 - 드래곤 커브](https://www.acmicpc.net/problem/15685)
