add : 쿠버네티스 정리본 등록

--- a/_posts/GCP/Kubernetes/2023-06-19-(들어가기전)용어 간단 정리.md
+++ b/_posts/GCP/Kubernetes/2023-06-19-(들어가기전)용어 간단 정리.md
@@ -90,6 +90,8 @@ typora-root-url: ../../..
 
 `Kubernetes` 는 컨테이너화된 워크로드와 서비스를 관리하기 위한 **오픈소스 플랫폼**입니다. 이는 선언적 구성과 자동화를 모두 용이하게 합니다.
 
+**즉, 오케스트라 도구라 칭합니다!**
+
 <br><br>
 
 ## 2. Container
