fix : 이미지 경로 수정

--- a/_posts/Language/C/2021-08-22-(C)Basic(기초문법).md
+++ b/_posts/Language/C/2021-08-22-(C)Basic(기초문법).md
@@ -20,23 +20,23 @@ typora-root-url: ../../..
 
 ## 들어가기전...
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image002.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image002.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image004.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image004.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image006.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image006.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image008.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image008.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image010.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image010.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image012.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image012.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image014.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image014.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image016.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image016.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image018.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image018.gif" />
 
 <br><br>
 
@@ -50,7 +50,7 @@ typora-root-url: ../../..
 
 **printf와 scanf와 scanf_s가 있는데, scanf 사용시 MSVS 사용자들은?**
 
-* \#pragma warning(disable:4996) 넣어주면 됨.
+* /#pragma warning(disable:4996) 넣어주면 됨.
 
 <br>
 
@@ -73,59 +73,59 @@ typora-root-url: ../../..
 
 **<정수형 범위>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image020.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image020.gif" />
 
 <br>
 
 **<이스케이프 문자>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image022.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image022.gif" />
 
 <br>
 
 **<연산자 분류>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image024.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image024.gif" />
 
 <br>
 
 **<switch문 주의할점> -> 정수와, 문자 하나만 가능!! (자바는 문자열도 가능)**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image026.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image026.gif" />
 
 <br>
 
 **<do-while문>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image028.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image028.gif" />
 
 <br>
 
 **<난수> srand()**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image030.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image030.gif" />
 
 <br>
 
 **<지역변수와 전역변수의 초기값의 차이점> - 정수는 전역 : 0, 지역 : 쓰레기값 이라는 차이점.**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image032.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image032.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image034.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image034.gif" />
 
 <br>
 
-\- 전역변수는 프로그램 끝날때 까지 메모리에서 없어지지 않고 처음부터 바로 메모리에 들어가 있다. 
+/- 전역변수는 프로그램 끝날때 까지 메모리에서 없어지지 않고 처음부터 바로 메모리에 들어가 있다. 
 
-\- 지역변수는 스택에 push/pop하는 것처럼 들어갔다가 사라진다.
+/- 지역변수는 스택에 push/pop하는 것처럼 들어갔다가 사라진다.
 
-\- static은 지역변수 처럼 push해서 메모리 생겼는데 함수 끝나도 사라지지 않는다. 따라서 그다음 max()함수 실행시 int a = 0;인 초기화를 하지 않으며 바로 메모리로 가서 a가 2로 ++ 된다.
+/- static은 지역변수 처럼 push해서 메모리 생겼는데 함수 끝나도 사라지지 않는다. 따라서 그다음 max()함수 실행시 int a = 0;인 초기화를 하지 않으며 바로 메모리로 가서 a가 2로 ++ 된다.
 
 <br>
 
 **함수를 메인함수 아래에 작성 했을시 함수원형을 꼭 위에 선언!!**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image036.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image036.gif" />
 
 **3번이 정답 (변수 생략 가능)**
 
@@ -135,31 +135,31 @@ typora-root-url: ../../..
 
 **<파일 모드> File 모드**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image038.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image038.gif" />
 
 <br>
 
 **<파일 입출력 함수> - fgetc, fscanf 와 fputc, fprintf이다. 출력이 File에 출력한다는 말!!**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image040.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image040.gif" />
 
 EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 **<포인터의 간접 참조 연산자> - 변수선언 * 와 사용할때 * 의 차이점 구분.**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image042.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image042.gif" />
 
 <br>
 
 **<간점 참조 연산자와 증감 연산자>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image044.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image044.gif" />
 
 <br>
 
 **<구조체>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image046.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image046.gif" />
 
 => 배열처럼 한꺼번에 초기화 가능!
 
@@ -169,25 +169,25 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 **<구조체 변수의 대입과 비교>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image048.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image048.gif" />
 
 <br>
 
 **<구조체 배열>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image050.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image050.gif" />
 
 <br>
 
 **<구조체를 가리키는 포인터>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image052.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image052.gif" />
 
 <br>
 
 **<정적 메모리 할당과 동적 메모리 할당>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image054.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image054.gif" />
 
 <br>
 
@@ -195,97 +195,97 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 ### C언어 예제들 - 3장 구성요소
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image056.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image056.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image058.jpg)
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image058.jpg)
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image060.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image060.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image062.jpg)
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image062.jpg)
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image064.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image064.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image066.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image066.gif" />
 
 <br><br>
 
 ### C언어 예제들 - 4~5장 변수와 연산자
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image068.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image068.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image070.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image070.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image072.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image072.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image074.jpg)
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image074.jpg)
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image076.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image076.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image078.jpg)
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image078.jpg)
 
 <br><br>
 
 ### C언어 예제들 - 6~7장 조건문과 반복문
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image080.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image080.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image082.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image082.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image084.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image084.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image086.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image086.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image088.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image088.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image090.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image090.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image092.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image092.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image094.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image094.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image096.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image096.gif" />
 
 <br><br>
 
 ### C언어 예제들 - 8~9장 함수와 변수
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image098.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image098.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image100.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image100.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image102.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image102.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image104.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image104.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image106.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image106.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image108.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image108.gif" />
 
 <br>
 
 **<문자배열 초기화>**
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image110.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image110.gif" />
 
-**=> \0은 널문자 입니다, 배열은 배열명이 첫번째 주소값인거 기억!! 따로 &필요X** 
+**=> /0은 널문자 입니다, 배열은 배열명이 첫번째 주소값인거 기억!! 따로 &필요X** 
 
 <br><br>
 
 ### C언어 예제들 - 10~12장 배열과 문자열
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image112.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image112.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image114.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image114.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image116.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image116.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image118.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image118.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image120.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image120.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image122.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image122.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image124.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image124.gif" />
 
 **=> 정답 ! 5번 scanf("%s", str);**
 
@@ -293,45 +293,45 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 ### C언어 예제들 - 11장 포인터
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image126.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image126.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image128.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image128.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image130.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image130.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image132.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image132.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image134.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image134.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image136.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image136.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image138.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image138.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image140.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image140.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image142.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image142.gif" />
 
 <br><br>
 
 ### C언어 예제들 - 13,17장 구조체와 동적 할당
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image144.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image144.gif" />
 
 **=> 틀린부분 총 7개**
 
 <br>
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image146.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image146.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image148.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image148.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image150.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image150.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image152.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image152.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image154.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image154.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image156.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image156.gif" />
 
 1.메모리 낭비 적다!! 2. 메모리 낭비 막는것!! 3. 이거 또한 장점!
 
@@ -345,41 +345,41 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 <br>
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image158.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image158.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image160.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image160.gif" />
 
 <br><br>
 
 ### C언어 예제들 - 15장 파일 입출력
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image162.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image162.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image164.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image164.gif" />
 
 **한글은 2바이트이고 char는 1바이트 단위인데 어떻게 잘 출력 되었을까??**
 
 * 1바이트만 가져왔을 땐 깨진 문자이고, 또 1바이트 가져오는 순간 한글 한글자가 완성이 된다. 안녕하세요(10번 반복함)
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image166.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image166.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image168.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image168.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image170.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image170.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image172.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image172.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image174.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image174.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image176.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image176.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image178.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image178.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image180.jpg)
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image180.jpg)
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image182.gif" />
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image182.gif" />
 
-<img src=".\images\2021-08-22-(C)Basic(기초문법)\clip_image184.jpg)
+<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image184.jpg)
 
  
 
