fix : 구조변경 이미지 경로수정

--- a/_posts/Language/C/2021-08-22-(C)Basic(기초문법).md
+++ b/_posts/Language/C/2021-08-22-(C)Basic(기초문법).md
@@ -20,7 +20,7 @@ typora-root-url: ../../..
 
 ## 들어가기전...
 
-<img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image002.gif" />
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image002.gif" />
 
 <img src="./images/2021-08-22-(C)Basic(기초문법)/clip_image004.gif" />
 
