--- a/_posts/GCP/Kubernetes_중급/2023-06-19-(들어가기전)용어 간단 정리.md
+++ b/_posts/GCP/Kubernetes_중급/2023-06-19-(들어가기전)용어 간단 정리.md
@@ -1,6 +1,6 @@
 ---
 title:  "[들어가기전]용어 간단 정리"
-categories : [Kubernetes]
+categories : [Kubernetes_Mid]
 tag : [구글 클라우드, GCP, GCC, 구글 클라우드 콘솔, 클라우드 쉘, 쿠버네티스, Kubernetes, 구글 클라우드 스터디 잼, 스터디 잼 중급]
 toc: true
 toc_sticky: true
